# SMW_ESP32

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.cmd  build.sh  fetch_module.cmd  main.cpp  sdl_main.cpp  user_code.cpp  user_code.hpp
editor/: CMakeLists.txt  README.md  components.drawio  components_test.drawio  config.json  drawio_lib.xml  level.drawio  lib_gen_config.json
editor/app/: main.cpp
editor/include/: JsonComponentWriter.hpp
editor/modules/drawio/level_gen/include/: LevelConverter.hpp
editor/modules/drawio/level_gen/src/: JsonWriter.cpp  LevelConverter.cpp  XmlExtractor.cpp
editor/modules/drawio/lib_gen/include/: Image.h  LibGenerator.hpp  TileExtractor.h  utils.hpp
editor/modules/drawio/lib_gen/src/: Image.cpp  LibGenerator.cpp
editor/modules/level_gen/include/: JsonWriter.hpp  LevelConverter.hpp  XmlExtractor.hpp
editor/modules/level_gen/src/: LevelConverter.cpp  XmlExtractor.cpp
editor/modules/lib_gen/include/: Image.h  LibGenerator.hpp  TileConfig.hpp  TileExtractor.h  TileExtractor.hpp  utils.hpp
editor/modules/lib_gen/src/: Image.cpp  LibGenerator.cpp  TileConfig.cpp  TileExtractor.cpp
editor/src/: JsonComponentWriter.cpp  JsonComponentWriter.hpp  LevelConverter.cpp  LevelConverter.hpp  XmlComponentExtractor.cpp  main.cpp
game/: CMakeLists.txt  Readme.md
src/: sdl_main.cpp  user_code.cpp
tools/level editor/: README.md  SMW Components.drawio
